--- a/django-sunat/src/upc/sunat/templates/sunat.html
+++ b/django-sunat/src/upc/sunat/templates/sunat.html
@@ -32,13 +32,14 @@
                         <div class="row-fluid">
                             <table class="table table-bordered table-hover">
                                 <thead>
+                                <tr>
                                 <th>Item</th>
                                 <th>Concepto</th>
                                 <th>Ruc</th>
                                 <th>Periodo</th>
                                 <th>tributo</th>
                                 <th>Resolucion</th>
-                                <th>Monto</th>
+                                <th>Monto</th></tr>
                                 </thead>
                                 <tbody>
                                 {% for debt in page_obj %}
