debt and person crud

--- a/symfony2-sunat/src/Upc/Sunat/SunatBundle/Resources/views/Includes/menu.html.twig
+++ b/symfony2-sunat/src/Upc/Sunat/SunatBundle/Resources/views/Includes/menu.html.twig
@@ -10,21 +10,26 @@
             <div class="nav-collapse collapse navbar-responsive-collapse">
                 <ul class="nav">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categoria <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Concepto <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('_admin') }}">Nueva Grupo Categoria</a></li>
-                            <li><a href="{{ path('_admin') }}">Consultar Grupo Categoria</a></li>
-                            <li class="divider"></li>
-                            <li><a href="{{ path('_admin') }}">Nueva Categoria</a></li>
-                            <li><a href="{{ path('_admin') }}">Consultar Categoria</a></li>
+                            <li><a href="{{ path('concept_add') }}">Nueva Concepto</a></li>
+                            <li><a href="{{ path('concept_list') }}">Consultar Concepto</a></li>
                         </ul>
                     </li>
                     <li class="divider-vertical"></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tarjetas <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Persona <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('_admin') }}">Nueva Tarjeta</a></li>
-                            <li><a href="{{ path('_admin') }}">Consultar Tarjeta</a></li>
+                            <li><a href="{{ path('person_add') }}">Nueva Persona</a></li>
+                            <li><a href="{{ path('person_list') }}">Consultar Persona</a></li>
+                        </ul>
+                    </li>
+                    <li class="divider-vertical"></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Multa <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path('debt_add') }}">Nueva Multa</a></li>
+                            <li><a href="{{ path('debt_list') }}">Consultar Multa</a></li>
                         </ul>
                     </li>
                 </ul>
