--- a/spring-sunat/src/main/webapp/stylesheets/bootstrap.css
+++ b/spring-sunat/src/main/webapp/stylesheets/bootstrap.css
@@ -3862,12 +3862,13 @@ input[type="submit"].btn.btn-mini {
   filter: alpha(opacity=80);
 }
 .modal {
-  position: fixed;
+  /*position: fixed;
   top: 10%;
   left: 50%;
   z-index: 1050;
   width: 560px;
-  margin-left: -280px;
+  margin-left: -280px;*/
+  z-index: 1050;
   background-color: #ffffff;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
